--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@
             <div class="memory-content cursor-pointer"
                  style="cursor: url('cursors/Hello Kitty help select.cur'), pointer;"
                  data-type="image"
-                 data-images='["images/IMG_0007.jpeg", "images/99999.mp4", "images/62070425-716F-44E6-8497-089720284A5F.MP4", "images/IMG_8262-2.mov"]'
+                 data-images='["images/IMG_0007.jpeg", "images/99999.mp4", "images/62070425-716F-44E6-8497-089720284A5F.MP4", "images/IMG_8262-2.mp4"]'
                  data-descriptions='["Staanplaatsen > zitplaatsen", "Beste concert van ons!", "SWITCHBLADES COCAINE!!!!", "I fell in love with a bad bitch, letterijk ik"]'>
                 <img src="images/IMG_0007.jpeg" alt="Herinnering 8562"
                      class="rounded-lg mb-2 border-4 border-pink-500 w-full h-64 object-cover mx-auto block" />
