--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
             <div class="memory-content cursor-pointer"
                  style="cursor: url('cursors/Hello Kitty help select.cur'), pointer;"
                  data-type="image"
-                 data-images='["images/IMG_5997.JPEG", "images/865C4228-2172-45BC-A57D-88F267CB56BC.mp4", "images/IMG_8962-2.mov", "images/IMG_8974.JPEG"]'
+                 data-images='["images/IMG_5997.JPEG", "images/865C4228-2172-45BC-A57D-88F267CB56BC.mp4", "images/IMG_8962-2.mp4", "images/IMG_8974.JPEG"]'
                  data-descriptions='["De zitplekken waren minder maar het samen ervaren kan nooit niet leuk zijn!", "FEIN FEIN FEIN FEIN!!!!!", "Waar staat tie dannnnnnnnnnn, piep klein", "Kijk hoe cute je hier staat!!!"]'>
                 <img src="images/IMG_5997.JPEG" alt="Herinnering 8562"
                      class="rounded-lg mb-2 border-4 border-pink-500 w-full h-64 object-cover mx-auto block" />
